--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     background-color: #1F2937;
     color: #F9FAF8;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
